fix(slider): fix spacing for label to control
remove margin between label and control

--- a/components/slider/index.css
+++ b/components/slider/index.css
@@ -30,6 +30,7 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-small);
   --spectrum-slider-label-bottom-to-text: var(--spectrum-component-bottom-to-text-75);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-75);
+  --spectrum-slider-control-to-field-label: -5px; /* var(--spectrum-slider-control-to-field-label-small) */
 }
 
 .spectrum-Slider--sizeM {
@@ -41,6 +42,8 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-medium);
   --spectrum-slider-label-bottom-to-text: var(--spectrum-component-bottom-to-text-75);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-75);
+  --spectrum-slider-control-to-field-label: -8px; /* var(--spectrum-slider-control-to-field-label-medium) */
+
 }
 
 .spectrum-Slider--sizeL {
@@ -52,6 +55,7 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-large);
   --spectrum-slider-label-bottom-to-text: var(--spectrum-component-bottom-to-text-100);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-100);
+  --spectrum-slider-control-to-field-label: -11px; /* var(--spectrum-slider-control-to-field-label-large) */
 }
 
 .spectrum-Slider--sizeXL {
@@ -63,6 +67,8 @@ governing permissions and limitations under the License.
   --spectrum-slider-handle-border-width-down: var(--spectrum-slider-handle-border-width-down-extra-large);
   --spectrum-slider-label-bottom-to-text: var(--spectrum-component-bottom-to-text-200);
   --spectrum-slider-label-top-to-text: var(--spectrum-component-top-to-text-200);
+  --spectrum-slider-control-to-field-label: -14px; /* var(--spectrum-slider-control-to-field-label-extra-large) */
+
 }
 
 .spectrum-Slider {
@@ -97,7 +103,6 @@ governing permissions and limitations under the License.
   --spectrum-slider-input-left: calc(var(--spectrum-slider-handle-margin-left) / 4);
   --spectrum-slider-track-handleoffset: var(--spectrum-slider-handle-gap);
 
-  --spectrum-slider-ramp-margin-top: 0;
   --spectrum-slider-range-track-reset: 0;
 }
 
@@ -363,7 +368,6 @@ governing permissions and limitations under the License.
   line-height: var(--mod-line-height-100, var(--spectrum-line-height-100));
 
   margin-block-start: var(--mod-spectrum-slider-label-top-to-text, var(--spectrum-slider-label-top-to-text));
-  margin-block-end: var(--mod-spectrum-slider-label-bottom-to-text, var(--spectrum-slider-label-bottom-to-text));
 
 
   /* international support */
@@ -376,7 +380,9 @@ governing permissions and limitations under the License.
 
 .spectrum-Slider-label {
   padding-inline-start: 0;
+  padding-block: 0;
   flex-grow: 1;
+  font-size: var(--mod-spectrum-slider-font-size, var(--spectrum-slider-font-size));
 }
 
 .spectrum-Slider-value {
